// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`getComponentCss() should return correct css for direction: bottom and theme: dark 1`] = `
":host {
  position: relative !important;
  display: inline-block !important;
  width: 1.5rem !important;
  height: 1.5rem !important;
  vertical-align: top;
}
:host([hidden]) {
  display: none !important;
}
p {
  font: normal normal 400 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  overflow-wrap: break-word;
  hyphens: auto;
  margin: 0;
}
button {
  display: block;
  appearance: none;
  background: transparent;
  border: 0;
  padding: 0;
  cursor: pointer;
  border-radius: 16px;
  transition: background-color var(--p-transition-duration, .24s) ease;
}
button:focus {
  outline: #0A0AFF 2px solid;
}
button:not(:focus-visible) {
  outline-color: transparent;
}
@media(hover:hover) {
  button:hover {
    -webkit-backdrop-filter: blur(32px);
    backdrop-filter: blur(32px);
    background-color: rgba(126, 127, 130, 0.20);
  }
}

.label {
  position: absolute;
  height: 1px;
  width: 1px;
  border: 0;
  margin: -1px;
  overflow: hidden;
  clip: rect(1px,1px,1px,1px);
  clip-path: inset(50%);
  white-space: nowrap;
}
.spacer {
  position: absolute;
  z-index: 9999;
  top: -16px;
  left: -16px;
  right: -16px;
  bottom: -16px;
  filter: drop-shadow(0 0 16px rgba(0,0,0,.3));
  backdrop-filter: drop-shadow(0px 0px 0px transparent);
  pointer-events: none;
  animation: 240ms keyframes-fadeIn ease forwards;
}
.spacer::before {
  content: "";
  position: absolute;
  border-style: solid;
  bottom: 0;
  left: 50%;
  transform: translateX(-50%);
  border-width: 0 12px 12px;
  border-color: transparent transparent #FFF;
}
.popover {
  position: absolute;
  max-width: 90vw;
  width: max-content;
  box-sizing: border-box;
  background: #FFF;
  padding: 8px 16px;
  pointer-events: auto;
  top: 100%;
  left: 50%;
  transform: translate3d(-50%, 0, 0);
  font: normal normal 400 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  overflow-wrap: break-word;
  hyphens: auto;
  list-style-type: none;
  color: #010205;
  white-space: inherit;
  border-radius: 4px;
}
@keyframes keyframes-fadeIn {
  from {
    opacity: 0;
  }
  to {
    opacity: 1;
  }
}
@media(min-width:480px) {
    .popover {
      max-width: 432px;
    }
}

@media (forced-colors: active) {
    .spacer::before {
      border-color: canvas canvas canvastext;
    }
    .popover {
      outline: 1px solid canvastext;
    }
}
"
`;

exports[`getComponentCss() should return correct css for direction: bottom and theme: light 1`] = `
":host {
  position: relative !important;
  display: inline-block !important;
  width: 1.5rem !important;
  height: 1.5rem !important;
  vertical-align: top;
}
:host([hidden]) {
  display: none !important;
}
p {
  font: normal normal 400 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  overflow-wrap: break-word;
  hyphens: auto;
  margin: 0;
}
button {
  display: block;
  appearance: none;
  background: transparent;
  border: 0;
  padding: 0;
  cursor: pointer;
  border-radius: 16px;
  transition: background-color var(--p-transition-duration, .24s) ease;
}
button:focus {
  outline: #0A0AFF 2px solid;
}
button:not(:focus-visible) {
  outline-color: transparent;
}
@media(hover:hover) {
  button:hover {
    -webkit-backdrop-filter: blur(32px);
    backdrop-filter: blur(32px);
    background-color: rgba(148, 149, 152, 0.20);
  }
}

.label {
  position: absolute;
  height: 1px;
  width: 1px;
  border: 0;
  margin: -1px;
  overflow: hidden;
  clip: rect(1px,1px,1px,1px);
  clip-path: inset(50%);
  white-space: nowrap;
}
.spacer {
  position: absolute;
  z-index: 9999;
  top: -16px;
  left: -16px;
  right: -16px;
  bottom: -16px;
  filter: drop-shadow(0 0 16px rgba(0,0,0,.3));
  backdrop-filter: drop-shadow(0px 0px 0px transparent);
  pointer-events: none;
  animation: 240ms keyframes-fadeIn ease forwards;
}
.spacer::before {
  content: "";
  position: absolute;
  border-style: solid;
  bottom: 0;
  left: 50%;
  transform: translateX(-50%);
  border-width: 0 12px 12px;
  border-color: transparent transparent #FFF;
}
.popover {
  position: absolute;
  max-width: 90vw;
  width: max-content;
  box-sizing: border-box;
  background: #FFF;
  padding: 8px 16px;
  pointer-events: auto;
  top: 100%;
  left: 50%;
  transform: translate3d(-50%, 0, 0);
  font: normal normal 400 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  overflow-wrap: break-word;
  hyphens: auto;
  list-style-type: none;
  color: #010205;
  white-space: inherit;
  border-radius: 4px;
}
@keyframes keyframes-fadeIn {
  from {
    opacity: 0;
  }
  to {
    opacity: 1;
  }
}
@media(min-width:480px) {
    .popover {
      max-width: 432px;
    }
}

@media (forced-colors: active) {
    .spacer::before {
      border-color: canvas canvas canvastext;
    }
    .popover {
      outline: 1px solid canvastext;
    }
}
"
`;

exports[`getComponentCss() should return correct css for direction: left and theme: dark 1`] = `
":host {
  position: relative !important;
  display: inline-block !important;
  width: 1.5rem !important;
  height: 1.5rem !important;
  vertical-align: top;
}
:host([hidden]) {
  display: none !important;
}
p {
  font: normal normal 400 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  overflow-wrap: break-word;
  hyphens: auto;
  margin: 0;
}
button {
  display: block;
  appearance: none;
  background: transparent;
  border: 0;
  padding: 0;
  cursor: pointer;
  border-radius: 16px;
  transition: background-color var(--p-transition-duration, .24s) ease;
}
button:focus {
  outline: #0A0AFF 2px solid;
}
button:not(:focus-visible) {
  outline-color: transparent;
}
@media(hover:hover) {
  button:hover {
    -webkit-backdrop-filter: blur(32px);
    backdrop-filter: blur(32px);
    background-color: rgba(126, 127, 130, 0.20);
  }
}

.label {
  position: absolute;
  height: 1px;
  width: 1px;
  border: 0;
  margin: -1px;
  overflow: hidden;
  clip: rect(1px,1px,1px,1px);
  clip-path: inset(50%);
  white-space: nowrap;
}
.spacer {
  position: absolute;
  z-index: 9999;
  top: -16px;
  left: -16px;
  right: -16px;
  bottom: -16px;
  filter: drop-shadow(0 0 16px rgba(0,0,0,.3));
  backdrop-filter: drop-shadow(0px 0px 0px transparent);
  pointer-events: none;
  animation: 240ms keyframes-fadeIn ease forwards;
}
.spacer::before {
  content: "";
  position: absolute;
  border-style: solid;
  top: 50%;
  left: 0;
  transform: translateY(-50%);
  border-width: 12px 0 12px 12px;
  border-color: transparent transparent transparent #FFF;
}
.popover {
  position: absolute;
  max-width: 90vw;
  width: max-content;
  box-sizing: border-box;
  background: #FFF;
  padding: 8px 16px;
  pointer-events: auto;
  top: 50%;
  right: 100%;
  transform: translate3d(0, -50%, 0);
  font: normal normal 400 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  overflow-wrap: break-word;
  hyphens: auto;
  list-style-type: none;
  color: #010205;
  white-space: inherit;
  border-radius: 4px;
}
@keyframes keyframes-fadeIn {
  from {
    opacity: 0;
  }
  to {
    opacity: 1;
  }
}
@media(min-width:480px) {
    .popover {
      max-width: 432px;
    }
}

@media (forced-colors: active) {
    .spacer::before {
      border-color: canvas canvas canvas canvastext;
    }
    .popover {
      outline: 1px solid canvastext;
    }
}
"
`;

exports[`getComponentCss() should return correct css for direction: left and theme: light 1`] = `
":host {
  position: relative !important;
  display: inline-block !important;
  width: 1.5rem !important;
  height: 1.5rem !important;
  vertical-align: top;
}
:host([hidden]) {
  display: none !important;
}
p {
  font: normal normal 400 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  overflow-wrap: break-word;
  hyphens: auto;
  margin: 0;
}
button {
  display: block;
  appearance: none;
  background: transparent;
  border: 0;
  padding: 0;
  cursor: pointer;
  border-radius: 16px;
  transition: background-color var(--p-transition-duration, .24s) ease;
}
button:focus {
  outline: #0A0AFF 2px solid;
}
button:not(:focus-visible) {
  outline-color: transparent;
}
@media(hover:hover) {
  button:hover {
    -webkit-backdrop-filter: blur(32px);
    backdrop-filter: blur(32px);
    background-color: rgba(148, 149, 152, 0.20);
  }
}

.label {
  position: absolute;
  height: 1px;
  width: 1px;
  border: 0;
  margin: -1px;
  overflow: hidden;
  clip: rect(1px,1px,1px,1px);
  clip-path: inset(50%);
  white-space: nowrap;
}
.spacer {
  position: absolute;
  z-index: 9999;
  top: -16px;
  left: -16px;
  right: -16px;
  bottom: -16px;
  filter: drop-shadow(0 0 16px rgba(0,0,0,.3));
  backdrop-filter: drop-shadow(0px 0px 0px transparent);
  pointer-events: none;
  animation: 240ms keyframes-fadeIn ease forwards;
}
.spacer::before {
  content: "";
  position: absolute;
  border-style: solid;
  top: 50%;
  left: 0;
  transform: translateY(-50%);
  border-width: 12px 0 12px 12px;
  border-color: transparent transparent transparent #FFF;
}
.popover {
  position: absolute;
  max-width: 90vw;
  width: max-content;
  box-sizing: border-box;
  background: #FFF;
  padding: 8px 16px;
  pointer-events: auto;
  top: 50%;
  right: 100%;
  transform: translate3d(0, -50%, 0);
  font: normal normal 400 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  overflow-wrap: break-word;
  hyphens: auto;
  list-style-type: none;
  color: #010205;
  white-space: inherit;
  border-radius: 4px;
}
@keyframes keyframes-fadeIn {
  from {
    opacity: 0;
  }
  to {
    opacity: 1;
  }
}
@media(min-width:480px) {
    .popover {
      max-width: 432px;
    }
}

@media (forced-colors: active) {
    .spacer::before {
      border-color: canvas canvas canvas canvastext;
    }
    .popover {
      outline: 1px solid canvastext;
    }
}
"
`;

exports[`getComponentCss() should return correct css for direction: right and theme: dark 1`] = `
":host {
  position: relative !important;
  display: inline-block !important;
  width: 1.5rem !important;
  height: 1.5rem !important;
  vertical-align: top;
}
:host([hidden]) {
  display: none !important;
}
p {
  font: normal normal 400 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  overflow-wrap: break-word;
  hyphens: auto;
  margin: 0;
}
button {
  display: block;
  appearance: none;
  background: transparent;
  border: 0;
  padding: 0;
  cursor: pointer;
  border-radius: 16px;
  transition: background-color var(--p-transition-duration, .24s) ease;
}
button:focus {
  outline: #0A0AFF 2px solid;
}
button:not(:focus-visible) {
  outline-color: transparent;
}
@media(hover:hover) {
  button:hover {
    -webkit-backdrop-filter: blur(32px);
    backdrop-filter: blur(32px);
    background-color: rgba(126, 127, 130, 0.20);
  }
}

.label {
  position: absolute;
  height: 1px;
  width: 1px;
  border: 0;
  margin: -1px;
  overflow: hidden;
  clip: rect(1px,1px,1px,1px);
  clip-path: inset(50%);
  white-space: nowrap;
}
.spacer {
  position: absolute;
  z-index: 9999;
  top: -16px;
  left: -16px;
  right: -16px;
  bottom: -16px;
  filter: drop-shadow(0 0 16px rgba(0,0,0,.3));
  backdrop-filter: drop-shadow(0px 0px 0px transparent);
  pointer-events: none;
  animation: 240ms keyframes-fadeIn ease forwards;
}
.spacer::before {
  content: "";
  position: absolute;
  border-style: solid;
  top: 50%;
  right: 0;
  transform: translateY(-50%);
  border-width: 12px 12px 12px 0;
  border-color: transparent #FFF transparent transparent;
}
.popover {
  position: absolute;
  max-width: 90vw;
  width: max-content;
  box-sizing: border-box;
  background: #FFF;
  padding: 8px 16px;
  pointer-events: auto;
  top: 50%;
  left: 100%;
  transform: translate3d(0, -50%, 0);
  font: normal normal 400 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  overflow-wrap: break-word;
  hyphens: auto;
  list-style-type: none;
  color: #010205;
  white-space: inherit;
  border-radius: 4px;
}
@keyframes keyframes-fadeIn {
  from {
    opacity: 0;
  }
  to {
    opacity: 1;
  }
}
@media(min-width:480px) {
    .popover {
      max-width: 432px;
    }
}

@media (forced-colors: active) {
    .spacer::before {
      border-color: canvas canvastext canvas canvas;
    }
    .popover {
      outline: 1px solid canvastext;
    }
}
"
`;

exports[`getComponentCss() should return correct css for direction: right and theme: light 1`] = `
":host {
  position: relative !important;
  display: inline-block !important;
  width: 1.5rem !important;
  height: 1.5rem !important;
  vertical-align: top;
}
:host([hidden]) {
  display: none !important;
}
p {
  font: normal normal 400 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  overflow-wrap: break-word;
  hyphens: auto;
  margin: 0;
}
button {
  display: block;
  appearance: none;
  background: transparent;
  border: 0;
  padding: 0;
  cursor: pointer;
  border-radius: 16px;
  transition: background-color var(--p-transition-duration, .24s) ease;
}
button:focus {
  outline: #0A0AFF 2px solid;
}
button:not(:focus-visible) {
  outline-color: transparent;
}
@media(hover:hover) {
  button:hover {
    -webkit-backdrop-filter: blur(32px);
    backdrop-filter: blur(32px);
    background-color: rgba(148, 149, 152, 0.20);
  }
}

.label {
  position: absolute;
  height: 1px;
  width: 1px;
  border: 0;
  margin: -1px;
  overflow: hidden;
  clip: rect(1px,1px,1px,1px);
  clip-path: inset(50%);
  white-space: nowrap;
}
.spacer {
  position: absolute;
  z-index: 9999;
  top: -16px;
  left: -16px;
  right: -16px;
  bottom: -16px;
  filter: drop-shadow(0 0 16px rgba(0,0,0,.3));
  backdrop-filter: drop-shadow(0px 0px 0px transparent);
  pointer-events: none;
  animation: 240ms keyframes-fadeIn ease forwards;
}
.spacer::before {
  content: "";
  position: absolute;
  border-style: solid;
  top: 50%;
  right: 0;
  transform: translateY(-50%);
  border-width: 12px 12px 12px 0;
  border-color: transparent #FFF transparent transparent;
}
.popover {
  position: absolute;
  max-width: 90vw;
  width: max-content;
  box-sizing: border-box;
  background: #FFF;
  padding: 8px 16px;
  pointer-events: auto;
  top: 50%;
  left: 100%;
  transform: translate3d(0, -50%, 0);
  font: normal normal 400 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  overflow-wrap: break-word;
  hyphens: auto;
  list-style-type: none;
  color: #010205;
  white-space: inherit;
  border-radius: 4px;
}
@keyframes keyframes-fadeIn {
  from {
    opacity: 0;
  }
  to {
    opacity: 1;
  }
}
@media(min-width:480px) {
    .popover {
      max-width: 432px;
    }
}

@media (forced-colors: active) {
    .spacer::before {
      border-color: canvas canvastext canvas canvas;
    }
    .popover {
      outline: 1px solid canvastext;
    }
}
"
`;

exports[`getComponentCss() should return correct css for direction: top and theme: dark 1`] = `
":host {
  position: relative !important;
  display: inline-block !important;
  width: 1.5rem !important;
  height: 1.5rem !important;
  vertical-align: top;
}
:host([hidden]) {
  display: none !important;
}
p {
  font: normal normal 400 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  overflow-wrap: break-word;
  hyphens: auto;
  margin: 0;
}
button {
  display: block;
  appearance: none;
  background: transparent;
  border: 0;
  padding: 0;
  cursor: pointer;
  border-radius: 16px;
  transition: background-color var(--p-transition-duration, .24s) ease;
}
button:focus {
  outline: #0A0AFF 2px solid;
}
button:not(:focus-visible) {
  outline-color: transparent;
}
@media(hover:hover) {
  button:hover {
    -webkit-backdrop-filter: blur(32px);
    backdrop-filter: blur(32px);
    background-color: rgba(126, 127, 130, 0.20);
  }
}

.label {
  position: absolute;
  height: 1px;
  width: 1px;
  border: 0;
  margin: -1px;
  overflow: hidden;
  clip: rect(1px,1px,1px,1px);
  clip-path: inset(50%);
  white-space: nowrap;
}
.spacer {
  position: absolute;
  z-index: 9999;
  top: -16px;
  left: -16px;
  right: -16px;
  bottom: -16px;
  filter: drop-shadow(0 0 16px rgba(0,0,0,.3));
  backdrop-filter: drop-shadow(0px 0px 0px transparent);
  pointer-events: none;
  animation: 240ms keyframes-fadeIn ease forwards;
}
.spacer::before {
  content: "";
  position: absolute;
  border-style: solid;
  top: 0;
  left: 50%;
  transform: translateX(-50%);
  border-width: 12px 12px 0;
  border-color: #FFF transparent transparent;
}
.popover {
  position: absolute;
  max-width: 90vw;
  width: max-content;
  box-sizing: border-box;
  background: #FFF;
  padding: 8px 16px;
  pointer-events: auto;
  bottom: 100%;
  left: 50%;
  transform: translate3d(-50%, 0, 0);
  font: normal normal 400 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  overflow-wrap: break-word;
  hyphens: auto;
  list-style-type: none;
  color: #010205;
  white-space: inherit;
  border-radius: 4px;
}
@keyframes keyframes-fadeIn {
  from {
    opacity: 0;
  }
  to {
    opacity: 1;
  }
}
@media(min-width:480px) {
    .popover {
      max-width: 432px;
    }
}

@media (forced-colors: active) {
    .spacer::before {
      border-color: canvastext canvas canvas;
    }
    .popover {
      outline: 1px solid canvastext;
    }
}
"
`;

exports[`getComponentCss() should return correct css for direction: top and theme: light 1`] = `
":host {
  position: relative !important;
  display: inline-block !important;
  width: 1.5rem !important;
  height: 1.5rem !important;
  vertical-align: top;
}
:host([hidden]) {
  display: none !important;
}
p {
  font: normal normal 400 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  overflow-wrap: break-word;
  hyphens: auto;
  margin: 0;
}
button {
  display: block;
  appearance: none;
  background: transparent;
  border: 0;
  padding: 0;
  cursor: pointer;
  border-radius: 16px;
  transition: background-color var(--p-transition-duration, .24s) ease;
}
button:focus {
  outline: #0A0AFF 2px solid;
}
button:not(:focus-visible) {
  outline-color: transparent;
}
@media(hover:hover) {
  button:hover {
    -webkit-backdrop-filter: blur(32px);
    backdrop-filter: blur(32px);
    background-color: rgba(148, 149, 152, 0.20);
  }
}

.label {
  position: absolute;
  height: 1px;
  width: 1px;
  border: 0;
  margin: -1px;
  overflow: hidden;
  clip: rect(1px,1px,1px,1px);
  clip-path: inset(50%);
  white-space: nowrap;
}
.spacer {
  position: absolute;
  z-index: 9999;
  top: -16px;
  left: -16px;
  right: -16px;
  bottom: -16px;
  filter: drop-shadow(0 0 16px rgba(0,0,0,.3));
  backdrop-filter: drop-shadow(0px 0px 0px transparent);
  pointer-events: none;
  animation: 240ms keyframes-fadeIn ease forwards;
}
.spacer::before {
  content: "";
  position: absolute;
  border-style: solid;
  top: 0;
  left: 50%;
  transform: translateX(-50%);
  border-width: 12px 12px 0;
  border-color: #FFF transparent transparent;
}
.popover {
  position: absolute;
  max-width: 90vw;
  width: max-content;
  box-sizing: border-box;
  background: #FFF;
  padding: 8px 16px;
  pointer-events: auto;
  bottom: 100%;
  left: 50%;
  transform: translate3d(-50%, 0, 0);
  font: normal normal 400 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  overflow-wrap: break-word;
  hyphens: auto;
  list-style-type: none;
  color: #010205;
  white-space: inherit;
  border-radius: 4px;
}
@keyframes keyframes-fadeIn {
  from {
    opacity: 0;
  }
  to {
    opacity: 1;
  }
}
@media(min-width:480px) {
    .popover {
      max-width: 432px;
    }
}

@media (forced-colors: active) {
    .spacer::before {
      border-color: canvastext canvas canvas;
    }
    .popover {
      outline: 1px solid canvastext;
    }
}
"
`;
